  - Offline mode UUID task mercy branch #4384
    - Prevent the GatherUUIDTask from wiping the database on true offline mode servers.
  - Fix towns being able to get around the maxNumberResidentsWithoutNation setting.
0.96.2.23:
  - Fix plotManagementRevertSpeed still being in the getWorldColumns() in the SQL_Schema.
  - Fix missing check to be sure that town banks are capped.
  - Metadata Improvements, courtesy of Silverwolfg11 with PR #4386.
    - Adds a new metadata field to store longs by introducing the LongDataField.
    - Makes the CustomDataField class truly abstract relying less on switch statements and makes it much easier to add new metadata types in the future, potentially paving the way for even allowing developers to add their own metadata types in the future.
  - Fix flipped save/load types.
0.96.3.0:
  - Bump version for Release.
0.96.3.1:
  - Fix forcefire missing from /tw toggle tab-completion.
  - Add GUIs to display the switch and itemuse lists of materials.
    - https://user-images.githubusercontent.com/879756/97643654-5570f180-1a16-11eb-87e3-9c1b9dfb1823.PNG
  - New Command: /towny switches
    - Opens GUI showing all of the switch materials.
  - New Command: /towny itemuse
    - Opens GUI showing all of the itemuse materials.
  - NationPreMergeEvent, NationMergeEvent, PreNewNationEvent, courtesy of Jena-Bot with PR #4402 (First-Time Contributor!)
  - API: New Events:
    - NationPreMergeEvent - Cancellable event thrown before a nation merge occurs.
    - NationMergeEvent - Thrown when nations merge.
    - PreNewNationEvent - Cancellable event thrown before a nation is created.
0.96.3.2:
  - Fix /ta toggle war having backwards logic.
  - New Command: /towny farmblocks
    - Opens GUI showing all of the farmplot materials.
  - New Command: /towny wildsblocks
    - Opens GUI showing all of the wilds plot materials/materials allowed to be used in the wilderness.  